[package]
name = "slight-lockd"
version = "0.1.0"
edition = "2021"
authors = ["DeisLabs Engineering Team"]

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "a79a4be33d76ddf62839ba71602c26a96610ef7c" }
wit-error-rs = { git = "https://github.com/danbugs/wit-error-rs", rev = "05362f1a4a3a9dc6a1de39195e06d2d5d6491a5e" }
slight-events-api = { path = "../events-api" }
slight-common = { path = "../common" }
slight-runtime-configs = { path = "../runtime-configs" }
anyhow = "1"
uuid = "1"
crossbeam-channel = "0.5.5"
tracing = { version = "0.1", features = ["log"] }
url = "2.2"
futures = "0.3"
# lockd.etcd deps
etcd-client = "0.9"
tokio = { version = "1.0", features = ["full"] }
