[package]
name = "slight-messaging"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
test = false
doctest = false

[dependencies]
anyhow = { workspace = true }
wit-bindgen-wasmtime = { workspace = true }
wit-error-rs = { workspace = true }
slight-common = { path = "../common" }
slight-runtime-configs = { path = "../runtime-configs" }
uuid = { version = "1.1", features = ["v4"] }
tracing = { workspace = true }
crossbeam-channel = "0.5"
url = "2"
async-trait = { workspace = true }
tokio = { workspace = true }
# messaging.filesystem deps
filesystem-pubsub = { git = "https://github.com/danbugs/filesystem-pubsub", rev = "45f369ea58d98a8b1d273a9a1fddbceb773fc607", optional = true}
# messaging.confluent_apache_kafka deps
rdkafka = { version = "0.29", features = ["cmake-build", "ssl"], optional = true}
openssl = { version = "0.10", features = ["vendored"], optional = true }
# messaging.mosquitto
mosquitto-rs = { version = "0.4.0", features = ["vendored-openssl", "vendored-mosquitto"], optional = true}
async-channel = { version = "1.5", optional = true }
# messaging.azsbus deps
azure_core = { version = "0.8.0", optional = true }
azure_messaging_servicebus = { version = "0.8.0", optional = true }
http = { version = "0.2", optional = true }

[features]
default = ["filesystem"]
apache_kafka = ["rdkafka", "openssl"]
filesystem = ["filesystem-pubsub"]
mosquitto = ["mosquitto-rs", "async-channel"]
azsbus = ["azure_core", "azure_messaging_servicebus", "http"]