[package]
name = "mq-azure-servicebus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_messaging_servicebus = { version = "0.3.0", git = "https://github.com/danbugs/azure-sdk-for-rust", rev = "88e1f5d4aadd3bce872396783291a7d4885e7816" }
azure_core = "0.2"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen" }
capability = { path = "../capability" }
anyhow = "1.0"
url = "2.2"
chrono = "0.4.19"
futures = "0.3"
http = "0.2.7"