[package]
name = "mq-azure-servicebus"
version = "0.1.0"
edition = "2021"
authors = ["DeisLabs Engineering Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_messaging_servicebus = { version = "0.2.0", git = "https://github.com/danbugs/azure-sdk-for-rust", rev = "920b7d948d64c69ad7185dc94cba043c663c69a6" }
azure_core = "0.2"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen" }
anyhow = "1.0"
url = "2.2"
chrono = "0.4.19"
futures = "0.3"
http = "0.2.7"
runtime = { path = "../runtime" }