[package]
name = "mq-azure-servicebus"
version = "0.1.0"
edition = "2021"
authors = ["DeisLabs Engineering Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_messaging_servicebus = { version = "0.2", git = "https://github.com/danbugs/azure-sdk-for-rust", rev = "40deff431c8a87ba60d93c59ea35fd11c4f9caad" }
azure_core = { version = "0.2", git = "https://github.com/danbugs/azure-sdk-for-rust", rev = "40deff431c8a87ba60d93c59ea35fd11c4f9caad" }
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "a79a4be33d76ddf62839ba71602c26a96610ef7c" }
anyhow = "1.0"
url = "2.2"
chrono = "0.4.19"
futures = "0.3"
http = "0.2.7"
runtime = { path = "../runtime" }
proc_macro_utils = { path = "../proc_macro_utils" }
uuid = "1"
wit-error-rs = { git = "https://github.com/danbugs/wit-error-rs", rev = "05362f1a4a3a9dc6a1de39195e06d2d5d6491a5e" }
crossbeam-channel = "0.5.5"
events-api = { path = "../events-api" }
