[package]
name = "slight-mq"
version = "0.1.0"
edition = "2021"
authors = ["DeisLabs Engineering Team"]

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "v0.2.0", features = ["async"]}
wit-error-rs = { git = "https://github.com/danbugs/wit-error-rs", rev = "05362f1a4a3a9dc6a1de39195e06d2d5d6491a5e" }
slight-events-api = { path = "../events-api" }
slight-common = { path = "../common" }
slight-runtime-configs = { path = "../runtime-configs" }
anyhow = "1"
uuid = { version = "1.1", features = ["v4"] }
crossbeam-channel = "0.5"
tracing = { version = "0.1", features = ["log"] }
url = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
# mq.azsbus deps
azure_core = "0.5.0"
azure_messaging_servicebus = "0.5.0"
chrono = "0.4"
http = "0.2"
# mq.filesystem has no specific deps
