[package]
name = "slight-mq"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-wasmtime = { workspace = true }
wit-error-rs = { workspace = true }
slight-events-api = { path = "../events-api" }
slight-common = { path = "../common" }
slight-runtime-configs = { path = "../runtime-configs" }
anyhow = { workspace = true }
uuid = { version = "1.1", features = ["v4"] }
crossbeam-channel = "0.5"
tracing = { version = "0.1", features = ["log"] }
url = "2"
async-trait = { workspace = true }
tokio = { version = "1", features = ["full"] }
# mq.azsbus deps
azure_core = "0.5.0"
azure_messaging_servicebus = "0.5.0"
chrono = "0.4"
http = "0.2"
# mq.filesystem has no specific deps
